--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 						
 						<div style="text-align:center;">
 						<div style="height: 10px; overflow: hidden;"></div>
-						<a class="wsite-button wsite-button-small wsite-button-normal" href="https://lochs.media/" target="_blank">
+						<a class="wsite-button wsite-button-small wsite-button-normal" href="https://media.lochstudios.com/" target="_blank">
 						<span class="button">Media Production</span>
 						</a>
 						<br><br>
