--- a/remote-support.html
+++ b/remote-support.html
@@ -43,7 +43,8 @@
 							<!-- Content -->
 								<article>
 									<h2>REMOTE SUPPORT</h2>
-									<p>Do you have an issue and can't bring your computer in to us? ‌Is there something small that needs to be completed, like updating your computer? ‌We can do it all remotely, using special software, we can remote in and see your screen and help!
+									<p>Do you have an issue and can't bring your computer in to us? ‌Is there something small that needs to be completed, like updating your computer?
+									<br />We can come out to your house or business (Click here for prices for call outs: <a href="visit-me.html" target="_self">VISIT ME</a>) or we can do it remotely, using special software, we can remote in and see your screen and help you.</p>
 									<div id="594502428989397911">
 									<div>
 									<div id="element-price-table" data-platform-element-id="325178514791279925-1.2.7" class="platform-element-contents">
