--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,15 @@
 							<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="./">Home</a></li>
+									<li class="current"><a href="./">Home</a></li>
 									<li>
 										<a href="services.html">Services</a>
-											<ul><li><a href="remote-support.html">Remote Support</a></li></ul>
+											<ul>
+												<li><a href="remote-support.html">Remote Support</a></li>
+												<li><a href="visit-me.html">Visit Me</a></li>
+											</ul>
 									</li>
-									<li class="current"><a href="contact.html">Contact</a></li>
+									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 
