--- a/services.html
+++ b/services.html
@@ -21,10 +21,13 @@
 							<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="./">Home</a></li>
-									<li class="current">
+									<li class="current"><a href="./">Home</a></li>
+									<li>
 										<a href="services.html">Services</a>
-											<ul><li><a href="remote-support.html">Remote Support</a></li></ul>
+											<ul>
+												<li><a href="remote-support.html">Remote Support</a></li>
+												<li><a href="visit-me.html">Visit Me</a></li>
+											</ul>
 									</li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
