--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 									<li class="current"><a href="./">Home</a></li>
 									<li>
 										<a href="services.html">Services</a>
-											<ul><li><a href="remote-support.html">Remote Support</a></li></ul>
+											<ul>
+												<li><a href="remote-support.html">Remote Support</a></li>
+												<li><a href="visit-me.html">Visit Me</a></li>
+											</ul>
 									</li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
