--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 							<div class="col-5 col-12-medium">
 								<ul>
 									<li><a href="services.html" class="button large icon solid fa-arrow-circle-right">WE CAN HELP!</a></li>
+									<li><a href="visit-me.html" class="button large icon solid fa-arrow-circle-right">WE COME TO YOU!</a></li>
 									<li><a href="contact.html" class="button alt large icon solid fa-question-circle">CONTACT US?</a></li>
 								</ul>
 							</div>
