--- a/remote-support.html
+++ b/remote-support.html
@@ -83,8 +83,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 														<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, 2 Calls $30">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/DhvVMELf">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div>
 														</div>
@@ -92,8 +92,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 														<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, 5 Calls $50">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/eERL2BZt">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div>
 														</div>
@@ -101,8 +101,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 														<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, 15 Calls $100">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/WBY4YHZp">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div></div>
 													</td>
@@ -149,8 +149,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 															<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, 30 Calls $150">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/A6kTHs9s">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div>
 														</div>
@@ -158,8 +158,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 														<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, 50 Calls $200">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/RCBWZfLI">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div>
 														</div>
@@ -167,8 +167,8 @@
 													<td class="cell">
 														<div style="text-align:center;">
 														<div style="height: 10px; overflow: hidden;"></div>
-															<a class="wsite-button wsite-button-small wsite-button-normal" href="mailto:support@lscomputer.repair?subject=Remote Support, Unlimited $300">
-															<span class="button">Inquire</span>
+															<a class="wsite-button wsite-button-small wsite-button-normal" href="https://square.link/u/IGWgjCib">
+															<span class="button">Subscribe</span>
 															</a>
 														<div style="height: 10px; overflow: hidden;"></div>
 														</div>
