--- a/visit-me.html
+++ b/visit-me.html
@@ -54,19 +54,19 @@
 										<table class="price-chart  buttonLocation-Bottom" style="color:#000000;">
 											<tbody>
 												<tr class="name">
-													<td class="cell"></td>
 													<td class="cell"><div class="paragraph">Our Call Out Fee</div></td>
-													<td class="cell"></td>
+													<td class="cell"><div class="paragraph">Senior Card Holders</div></td>
+													<td class="cell"><div class="paragraph">Over Night Call Out Fee</div></td>
 												</tr>
 												<tr class="price">
-													<td class="cell"></td>
 													<td class="cell"><div class="paragraph">45<span style="color:red;">*</span></div></td>
-													<td class="cell"></td>
+													<td class="cell"><div class="paragraph">40<span style="color:red;">*</span></div></td>
+													<td class="cell"><div class="paragraph">1,000<span style="color:red;">*</span></div></td>
 												</tr>
 												<tr class="rate">
-													<td class="cell"></td>
 													<td class="cell"><div class="paragraph">Per Visit<br /><span style="color:red; font-size: medium; font-weight: bold;">+$3.50 p/km traveled</span></div></td>
-													<td class="cell"></td>
+													<td class="cell"><div class="paragraph">Per Visit<br /><span style="color:red; font-size: medium; font-weight: bold;">+$3.50 p/km traveled</span></div></td>
+													<td class="cell"><div class="paragraph">Per Call Out<br /><span style="color:red; font-size: medium; font-weight: bold;">+ All travel costs covered</span></div></td>
 												</tr>
 												<tr class="buttons-middle">
 													<td class="cell"></td>
@@ -75,7 +75,7 @@
 												</tr>
 												<tr class="metric">
 													<td class="cell"></td>
-													<td class="cell"><div class="paragraph"></div></td>
+													<td class="cell"></td>
 													<td class="cell"></td>
 												</tr>
 										</tbody></table>
