--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./assets/css/main.css" />
-		<link rel="icon" href="https://cdn.lochstudios.host/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
-        <link rel="shortcut icon" href="https://cdn.lochstudios.host/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
+		<link rel="icon" href="https://lscdn.site/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
+        <link rel="shortcut icon" href="https://lscdn.site/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
 	</head>
 	<body class="is-preload homepage">
 		<div id="page-wrapper">
@@ -15,7 +15,7 @@
 					<header id="header" class="container">
 						<!-- Logo -->
 							<div id="logo">
-								<a href="./" target="_self"><img src="https://cdn.lochstudios.host/static/logos/lspcr/lspcr-long.png" width="350px" alt="LSPCR Logo"></a>
+								<a href="./" target="_self"><img src="https://lscdn.site/static/logos/lspcr/lspcr-long.png" width="350px" alt="LSPCR Logo"></a>
 							</div>
 
 							<!-- Nav -->
@@ -95,7 +95,7 @@
 						<div class="col-2 col-6-medium col-12-small">
 						</div>
 						<div class="col-2 col-6-medium col-12-small">
-						<img src="https://cdn.lochstudios.host/static/logos/lochstudios/4803721/4803721.png" alt="LochStudios Logo" height="200px">
+						<img src="https://lscdn.site/static/logos/lochstudios/4803721/4803721.png" alt="LochStudios Logo" height="200px">
 						</div>
 						<div class="col-3 col-6-medium col-12-small">
 								<section class="widget contact last">
