--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="./assets/css/main.css" />
-		<link rel="icon" href="https://cdn.lochstudios.host/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
-        <link rel="shortcut icon" href="https://cdn.lochstudios.host/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
+		<link rel="icon" href="https://lscdn.site/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
+        <link rel="shortcut icon" href="https://lscdn.site/static/logos/lspcr/lspcr.png" type="image/x-icon"/>
 	</head>
 	<body class="is-preload homepage">
 		<div id="page-wrapper">
@@ -15,7 +15,7 @@
 					<header id="header" class="container">
 						<!-- Logo -->
 							<div id="logo">
-								<a href="./" target="_self"><img src="https://cdn.lochstudios.host/static/logos/lspcr/lspcr-long.png" width="350px" alt="LSPCR Logo"></a>
+								<a href="./" target="_self"><img src="https://lscdn.site/static/logos/lspcr/lspcr-long.png" width="350px" alt="LSPCR Logo"></a>
 							</div>
 
 							<!-- Nav -->
@@ -62,7 +62,7 @@
 							<div class="col-4 col-12-medium">
 								<!-- Box -->
 									<section class="box feature"><br>
-										<a class="image featured"><img src="https://cdn.lochstudios.host/static/logos/lspcr/Services/desktops.jpg" alt="Desktop Computer" /></a>
+										<a class="image featured"><img src="https://lscdn.site/static/logos/lspcr/Services/desktops.jpg" alt="Desktop Computer" /></a>
 										<div class="inner">
 											<header>
 												<h2>CUSTOM-BUILT COMPUTERS</h2>
@@ -78,7 +78,7 @@
 							<div class="col-4 col-12-medium">
 								<!-- Box -->
 									<section class="box feature"><br><br>
-										<a class="image featured"><img src="https://cdn.lochstudios.host/static/logos/lspcr/Services/RemoteIT.png" alt="Remote IT" /></a>
+										<a class="image featured"><img src="https://lscdn.site/static/logos/lspcr/Services/RemoteIT.png" alt="Remote IT" /></a>
 										<br />
 										<div class="inner">
 											<header>
@@ -97,7 +97,7 @@
 							<div class="col-4 col-12-medium">
 								<!-- Box -->
 									<section class="box feature">
-										<a class="image featured"><img src="https://cdn.lochstudios.host/static/logos/lspcr/Services/Laptops.jpg" alt="Laptop" /></a>
+										<a class="image featured"><img src="https://lscdn.site/static/logos/lspcr/Services/Laptops.jpg" alt="Laptop" /></a>
 										<br />
 										<div class="inner">
 											<header>
@@ -131,7 +131,7 @@
 						<div class="col-2 col-6-medium col-12-small">
 						</div>
 						<div class="col-2 col-6-medium col-12-small">
-						<img src="https://cdn.lochstudios.host/static/logos/lochstudios/4803721/4803721.png" alt="LochStudios Logo" height="200px">
+						<img src="https://lscdn.site/static/logos/lochstudios/4803721/4803721.png" alt="LochStudios Logo" height="200px">
 						</div>
 						<div class="col-3 col-6-medium col-12-small">
 								<section class="widget contact last">
