--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 									<div class="paragraph" style="text-align:left;">
 										<h4 style="color:#000000">Shop 5/70 Prince Street, Grafton, 2460, New South Wales, Australia</h4>
 										<div class="wsite-map">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.0077328412017!2d152.93237851510685!3d-29.690555482012464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9bdbf40f980927%3A0x8988754b3c2db78a!2sLochStudios!5e0!3m2!1sen!2sau!4v1603438302173!5m2!1sen!2sau" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+											<iframe src="https://www.google.com/maps/d/u/1/embed?mid=1q4hQ1C1w6kmKs5sThWjyjrFSy_qZvE4&ehbc=2E312F" width="640" height="480"></iframe>
 										</div>
 									</div>
 								</div>
