--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 										</p>
 									</div>
 									<div class="paragraph" style="text-align:left;">
-										<h4 style="color:#000000">Shop 5/70 Prince Street, Grafton, 2460, New South Wales, Australia</h4>
+										<h4 style="color:#000000">Our locations around the world:</h4>
 										<div class="wsite-map">
 											<iframe src="https://www.google.com/maps/d/u/1/embed?mid=1q4hQ1C1w6kmKs5sThWjyjrFSy_qZvE4&ehbc=2E312F" width="640" height="480"></iframe>
 										</div>
